compiler/tests/compiler/expected/output/ReturnTypeError.shtk.txt
MODULE ReturnTypeError.shtk
ERROR in Line 5 Col 5

    return a
    ^
Type error, did not expect int, expected float

ReturnTypeError.shtk:5:4
